Title component changed

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
    --color-active: #FAF9FA;
    --color-buttonHover: #6A19CD;
    --color-textColor: #fff;
+   --color-textGrey: #898DA9;
 }
 
 html {
